cmake_minimum_required(VERSION 3.20)
project(format)

set(PROJECT_VERSION_MAJOR 0)
set(PROJECT_VERSION_MINOR 0)
set(PROJECT_VERSION_PATCH 1)
set(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
 
FILE(GLOB SRC_LIST "./*.c")
ADD_EXECUTABLE(format ${SRC_LIST})
 
 
